--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mosypailiot
-</title>
-<link rel="stylesheet" href="./styles/landing.css">
-</head>
-<body>
-   
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mosypailiot</title>
+    <link rel="stylesheet" href="./styles/landing.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <section class="navbar-section">
+          <img src="./Assets/logo.svg" alt="" />
+          <button class="btn">Sign Up</button>
+        </section>
+      </nav>
+
+      <section class="hero-banner">
+        <h1>
+          Cool Dark UI Template for <br />
+          Webflow Agencies!
+        </h1>
+        <button class="btn">Stay Focused</button>
+      </section>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+  </body>
 </html>
