--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
       </section>
     </header>
 
-    <main></main>
+    <main>
+        <section class="action-section">
+            <div class="ac-left">
+                <h1>See It in Action</h1>
+                <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                <button class="btn">Launch Live Preview</button>
+            </div>
+            <div class="ac-right">
+                <img src="./Assets/wc-mini.png" alt="">
+            </div>
+        </section>
+
+    </main>
 
     <footer></footer>
   </body>
