--- a/index.html
+++ b/index.html
@@ -25,17 +25,39 @@
     </header>
 
     <main>
-        <section class="action-section">
-            <div class="ac-left">
-                <h1>See It in Action</h1>
-                <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
-                <button class="btn">Launch Live Preview</button>
-            </div>
-            <div class="ac-right">
-                <img src="./Assets/wc-mini.png" alt="">
-            </div>
-        </section>
+      <section class="action-section">
+        <div class="ac-left">
+          <h1>See It in Action</h1>
+          <p>
+            Explore the live preview and imagine your <br />
+            brand in this bold new look.
+          </p>
+          <button class="btn">Launch Live Preview</button>
+        </div>
+        <div class="ac-right">
+          <img src="./Assets/wc-mini.png" alt="" />
+        </div>
+      </section>
 
+      <section class="productive-section">
+        <div class="productive-header">
+          <h1 class="p-title">Joined Thousands of Productive Users</h1>
+          <div class="items">
+            <div class="data">
+              <h1>50K</h1>
+              <p>Active Users</p>
+            </div>
+            <div class="data">
+              <h1>2M+</h1>
+              <p>Focus Sessions</p>
+            </div>
+            <div class="data">
+              <h1>95%</h1>
+              <p>Satisfaction Rate</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
