--- a/index.html
+++ b/index.html
@@ -58,6 +58,70 @@
           </div>
         </div>
       </section>
+
+      <section class="user-feedback">
+        <div class="fedback-header">
+          <h1>What our users say</h1>
+        </div>
+
+        <div class="fd-user">
+          <div class="user">
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <h4>Loved by Designers</h4>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="pimg">
+              <img src="./Assets/avatar.png" alt="" />
+              <div>
+                <h5>Emily Carter</h5>
+                <p>Date: 06/03/2025</p>
+              </div>
+            </div>
+          </div>
+          <div class="user">
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <h4>Design Boost</h4>
+            <p>
+              “A game changer for our brand visuals. Our clients noticed the
+              difference instantly.” – PixelCraft Agency
+            </p>
+            <div class="pimg">
+              <img src="./Assets/avater2.jpg" alt="" />
+              <div>
+                <h5>Sophia Bennett</h5>
+                <p>Date: 02/01/2025</p>
+              </div>
+            </div>
+          </div>
+          <div class="user">
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <img src="./Assets/icon-star.png" alt="" />
+            <h4>Sleek & Simple</h4>
+            <p>
+              “Effortlessly stylish and professional – exactly what we needed to
+              impress.” – Nova Creative Studio
+            </p>
+            <div class="pimg">
+              <img src="./Assets/avater3.jpg" alt="" />
+              <div>
+                <h5>Olivia Morgan</h5>
+                <p>Date: 02/05/2025</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
