focus section add heading btn and image

--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
           </div>
         </div>
       </section>
+
+
+      <section class="focus-better">
+        <div class="focus-main">
+          <h1>Ready to focus better</h1>
+          <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+          <button class="btn">Ger Started Free</button>
+          <div class="focus-img">
+            <img src="./Assets/wc-big.png" alt="">
+          </div>
+          
+        </div>
+      </section>
     </main>
 
     <footer></footer>
