implement contact form with inputs and submit button

--- a/index.html
+++ b/index.html
@@ -123,17 +123,36 @@
         </div>
       </section>
 
-
       <section class="focus-better">
         <div class="focus-main">
           <h1>Ready to focus better</h1>
-          <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+          <p>
+            This template instantly leveled up our presence.” – Studio Vertex
+          </p>
           <button class="btn">Ger Started Free</button>
           <div class="focus-img">
-            <img src="./Assets/wc-big.png" alt="">
+            <img src="./Assets/wc-big.png" alt="" />
           </div>
-          
         </div>
+      </section>
+
+      <section class="contact-section">
+        <div class="contact-title">
+          <h1>Let’s Get in Touch</h1>
+        </div>
+
+        <form class="contact-form">
+          <label for="">Email</label>
+          <input type="email" name="" id="" placeholder="example@email.com">
+
+          <label for="">Name</label>
+          <input type="text" placeholder="full name">
+
+          <label for="">Message</label>
+          <textarea name="" id="" cols="50" rows="7" placeholder="write your message...."></textarea>
+
+          <button>Get in Touch</button>
+        </form>
       </section>
     </main>
 
