--- a/index.html
+++ b/index.html
@@ -156,6 +156,22 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-logo">
+        <img src="./Assets/footerlogo-cropped.svg" alt="">
+      </div>
+
+      <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+
+      <div class="footer-menu">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">How it Works</a></li>
+          <li><a href="">Services</a></li>
+        </ul>
+      </div>
+
+    </footer>
   </body>
 </html>
