--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>
               This template instantly leveled up our presence.” – Studio Vertex
             </p>
-            <div class="pimg">
+            <div class="reviewer">
               <img src="./Assets/avatar.png" alt="" />
               <div>
                 <h5>Emily Carter</h5>
@@ -90,10 +90,9 @@
             <img src="./Assets/icon-star.png" alt="" />
             <h4>Design Boost</h4>
             <p>
-              “A game changer for our brand visuals. Our clients noticed the
-              difference instantly.” – PixelCraft Agency
+             “Clean, professional, and so easy to customize. We loved it!” – Bright Studio
             </p>
-            <div class="pimg">
+            <div class="reviewer">
               <img src="./Assets/avater2.jpg" alt="" />
               <div>
                 <h5>Sophia Bennett</h5>
@@ -109,12 +108,11 @@
             <img src="./Assets/icon-star.png" alt="" />
             <h4>Sleek & Simple</h4>
             <p>
-              “Effortlessly stylish and professional – exactly what we needed to
-              impress.” – Nova Creative Studio
+             “Clients praised the clean and modern layout.” – Pixel Craft
             </p>
-            <div class="pimg">
+            <div class="reviewer">
               <img src="./Assets/avater3.jpg" alt="" />
-              <div>
+              <div class="reviewer-info ">
                 <h5>Olivia Morgan</h5>
                 <p>Date: 02/05/2025</p>
               </div>
@@ -151,7 +149,7 @@
           <label for="">Message</label>
           <textarea name="" id="" cols="50" rows="7" placeholder="write your message...."></textarea>
 
-          <button>Get in Touch</button>
+          <button class="btn">Get in Touch</button>
         </form>
       </section>
     </main>
